--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -1,6 +1,23 @@
 {
   "nav": { "home":"Home","products":"Products","order":"Order","about":"About Us","cart":"My Cart" },
-  "home": { "heroTitle":"Coffee, Calm & Clarity", "cta":"Shop Coffee" },
+  "home": {
+    "heroTitle":"Coffee, Calm & Clarity",
+    "cta":"Shop Coffee",
+    "sections": {
+      "farm": {
+        "title": "From the Coffee Farm",
+        "subtitle": "Sourcing the finest beans, straight to your cup"
+      },
+      "brew": {
+        "title": "Crafted Brewing",
+        "subtitle": "Every cup brewed with care, rich in aroma"
+      },
+      "featured": {
+        "title": "Featured Selection",
+        "subtitle": "Discover our most popular coffees"
+      }
+    }
+  },
   "products": { "title":"All Products","sort":"Sort","filter":"Filter","details":"Details","addToCart":"Add to Cart" },
   "order": {
     "title":"Checkout",
@@ -9,5 +26,12 @@
     "name":"Full Name","email":"Email","phone":"Phone",
     "address":"Address","province":"Province","district":"District","commune":"Commune","village":"Village",
     "deliveryFee":"Delivery Fee","subtotal":"Subtotal","total":"Total"
+  },
+
+  "about": {
+    "title": "About Us",
+    "story": "We roast coffee with calm, clarity and care. From farm to cup, we bring you a warm and minimal experience — where design is simple, but taste is deep."
   }
 }
+
+
