--- a/src/i18n/locales/kh.json
+++ b/src/i18n/locales/kh.json
@@ -1,6 +1,23 @@
 {
   "nav": { "home":"ទំព័រដើម","products":"ផលិតផល","order":"ការបញ្ជាទិញ","about":"អំពីពួកយើង","cart":"កន្រ្តក" },
-  "home": { "heroTitle":"កាហ្វេ ស្ងប់ស្ងាត់ និងច្បាស់លាស់", "cta":"ទិញកាហ្វេ" },
+  "home": {
+    "heroTitle":"កាហ្វេ ស្ងប់ស្ងាត់ និងច្បាស់លាស់",
+    "cta":"ទិញកាហ្វេ",
+    "sections": {
+      "farm": {
+        "title": "មកពីកសិដ្ឋានកាហ្វេ",
+        "subtitle": "ជ្រើសរើសកាហ្វេគុណភាពល្អបំផុត ដល់តែពែងរបស់អ្នក"
+      },
+      "brew": {
+        "title": "ការចម្អិនដោយកិត្តិយស",
+        "subtitle": "គ្រប់ពែងត្រូវបានចម្រាញ់ដោយការយកចិត្តទុកដាក់ ពោរពេញដោយក្លិនក្រអូប"
+      },
+      "featured": {
+        "title": "ការជ្រើសរើសពិសេស",
+        "subtitle": "ស្វែងយល់អំពីកាហ្វេពេញនិយមរបស់យើង"
+      }
+    }
+  },
   "products": { "title":"ផលិតផលទាំងអស់","sort":"តម្រៀប","filter":"តម្រង","details":"ព័ត៌មានលម្អិត","addToCart":"បញ្ចូលទៅកន្រ្តក" },
   "order": {
     "title":"ការទូទាត់",
@@ -9,5 +26,10 @@
     "name":"ឈ្មោះពេញ","email":"អ៊ីមែល","phone":"ទូរស័ព្ទ",
     "address":"អាសយដ្ឋាន","province":"ខេត្ត/ក្រុង","district":"ស្រុក/ខណ្ឌ","commune":"ឃុំ/សង្កាត់","village":"ភូមិ",
     "deliveryFee":"ថ្លៃដឹកជញ្ជូន","subtotal":"សរុបរង","total":"សរុប"
+  },
+
+  "about": {
+    "title": "អំពី​ពួក​យើង",
+    "story": "យើង​ឆុងកាហ្វេ​ដោយ​ភាពស្ងប់ស្ងាត់ ភាពច្បាស់លាស់ និង​ការ​ថែរក្សា។ ពី​កសិដ្ឋាន​ដល់​កែវ យើង​នាំមក​នូវបទពិសោធន៍កក់ក្តៅ និង​សាមញ្ញ — ការរចនាសាមញ្ញ ប៉ុន្តែរសជាតិជ្រៅជ្រះ។"
   }
 }
