--- a/src/i18n/locales/kh.json
+++ b/src/i18n/locales/kh.json
@@ -1,24 +1,16 @@
 {
-  "nav": { "home":"ទំព័រដើម","products":"ផលិតផល","order":"ការបញ្ជាទិញ","about":"អំពីពួកយើង","cart":"កន្រ្តក" },
+  "nav": { "home":"ទំព័រដើម","products":"ផលិតផល","order":"ការបញ្ជាទិញ","about":"អំពីពួកយើង","cart":"កន្ត្រក" },
   "home": {
     "heroTitle":"កាហ្វេ ស្ងប់ស្ងាត់ និងច្បាស់លាស់",
     "cta":"ទិញកាហ្វេ",
     "sections": {
-      "farm": {
-        "title": "មកពីកសិដ្ឋានកាហ្វេ",
-        "subtitle": "ជ្រើសរើសកាហ្វេគុណភាពល្អបំផុត ដល់តែពែងរបស់អ្នក"
-      },
-      "brew": {
-        "title": "ការចម្អិនដោយកិត្តិយស",
-        "subtitle": "គ្រប់ពែងត្រូវបានចម្រាញ់ដោយការយកចិត្តទុកដាក់ ពោរពេញដោយក្លិនក្រអូប"
-      },
-      "featured": {
-        "title": "ការជ្រើសរើសពិសេស",
-        "subtitle": "ស្វែងយល់អំពីកាហ្វេពេញនិយមរបស់យើង"
-      }
+      "farm": { "title": "មកពីកសិដ្ឋានកាហ្វេ", "subtitle": "ជ្រើសរើសកាហ្វេគុណភាពល្អបំផុត ដល់តែពែងរបស់អ្នក" },
+      "brew": { "title": "ការចម្អិនដោយកិត្តិយស", "subtitle": "គ្រប់ពែងត្រូវបានចម្រាញ់ដោយការយកចិត្តទុកដាក់ ពោរពេញដោយក្លិនក្រអូប" },
+      "featured": { "title": "ការជ្រើសរើសពិសេស", "subtitle": "ស្វែងយល់អំពីកាហ្វេពេញនិយមរបស់យើង" }
     }
   },
-  "products": {   "title": "ផលិតផលទាំងអស់",
+  "products": {
+    "title": "ផលិតផលទាំងអស់",
     "filter": "ត្រង",
     "sort": "តម្រៀប",
     "all": "ទាំងអស់",
@@ -31,7 +23,8 @@
     "details": "ព័ត៌មានលម្អិត",
     "addToCart": "បញ្ចូលកន្ត្រក",
     "code": "កូដ",
-    "chooseSize": "ជ្រើសទំហំ"},
+    "chooseSize": "ជ្រើសទំហំ"
+  },
   "order": {
     "title":"ការទូទាត់",
     "steps":["ព័ត៌មាន","ឥវ៉ាន់","ពិនិត្យឡើងវិញ","ការទូទាត់","បង្កាន់ដៃ"],
@@ -40,9 +33,50 @@
     "address":"អាសយដ្ឋាន","province":"ខេត្ត/ក្រុង","district":"ស្រុក/ខណ្ឌ","commune":"ឃុំ/សង្កាត់","village":"ភូមិ",
     "deliveryFee":"ថ្លៃដឹកជញ្ជូន","subtotal":"សរុបរង","total":"សរុប"
   },
-
   "about": {
     "title": "អំពី​ពួក​យើង",
     "story": "យើង​ឆុងកាហ្វេ​ដោយ​ភាពស្ងប់ស្ងាត់ ភាពច្បាស់លាស់ និង​ការ​ថែរក្សា។ ពី​កសិដ្ឋាន​ដល់​កែវ យើង​នាំមក​នូវបទពិសោធន៍កក់ក្តៅ និង​សាមញ្ញ — ការរចនាសាមញ្ញ ប៉ុន្តែរសជាតិជ្រៅជ្រះ។"
+  },
+  "common": {
+    "back": "ថយក្រោយ"
+  },
+  "payment": {
+    "cod": "បង់លុយពេលដឹកដល់ (COD)",
+    "aba": "ABA Pay",
+    "subtotal": "សរុបរង",
+    "delivery": "ថ្លៃដឹកជញ្ជូន",
+    "total": "សរុប",
+    "generating_qr": "កំពុងបង្កើត QR...",
+    "qr_hint": "ចុចដើម្បីបង្កើត QR។",
+    "payment_id": "លេខបង់ប្រាក់",
+    "scan_wait": "ស្កេនដើម្បីបង់ កំពុងរង់ចាំការបញ្ជាក់...",
+    "processing": "កំពុងដំណើរការ...",
+    "confirm_cod": "បញ្ជាក់ COD",
+    "generating": "កំពុងបង្កើត...",
+    "generate_qr": "បង្កើត QR"
+  },
+  "review": {
+    "customer": "អតិថិជន",
+    "address": "អាសយដ្ឋាន",
+    "no_address": "មិនមានអាសយដ្ឋាន",
+    "order_items": "ឥវ៉ាន់ដែលបានបញ្ជាទិញ",
+    "no_items": "មិនមានទំនិញ។",
+    "subtotal": "សរុបរង",
+    "delivery": "ថ្លៃដឹកជញ្ជូន",
+    "total": "សរុប",
+    "proceed_payment": "បន្ត​ទៅការទូទាត់",
+    "qty": "បរិមាណ",
+    "each": "ក្នុងមួយ",
+    "item": "ឥវ៉ាន់"
+  },
+  "address": {
+    "search_placeholder": "ស្វែងរក…",
+    "no_results": "គ្មានលទ្ធផល",
+    "select_province": "ជ្រើសខេត្ត/ក្រុង",
+    "select_district": "ជ្រើសស្រុក/ខណ្ឌ",
+    "select_commune": "ជ្រើសឃុំ/សង្កាត់",
+    "select_village": "ជ្រើសភូមិ",
+    "street": "ផ្លូវ/អាសយដ្ឋានលម្អិត",
+    "street_placeholder": "ឧ. ផ្លូវ/ផ្ទះ/អាគារ/ជាន់"
   }
 }
