--- a/src/i18n/locales/cn.json
+++ b/src/i18n/locales/cn.json
@@ -4,21 +4,13 @@
     "heroTitle":"一杯咖啡，一份从容",
     "cta":"选购咖啡",
     "sections": {
-      "farm": {
-        "title": "源自咖啡农场",
-        "subtitle": "甄选优质咖啡豆，直达您的杯中"
-      },
-      "brew": {
-        "title": "匠心冲煮",
-        "subtitle": "每一杯都用心萃取，浓郁香气弥漫"
-      },
-      "featured": {
-        "title": "特色推荐",
-        "subtitle": "发现我们的热门精选咖啡"
-      }
+      "farm": { "title": "源自咖啡农场", "subtitle": "甄选优质咖啡豆，直达您的杯中" },
+      "brew": { "title": "匠心冲煮", "subtitle": "每一杯都用心萃取，浓郁香气弥漫" },
+      "featured": { "title": "特色推荐", "subtitle": "发现我们的热门精选咖啡" }
     }
   },
-  "products": { "title": "全部产品",
+  "products": {
+    "title": "全部产品",
     "filter": "筛选",
     "sort": "排序",
     "all": "全部",
@@ -31,7 +23,8 @@
     "details": "详情",
     "addToCart": "加入购物车",
     "code": "编号",
-    "chooseSize": "选择规格"},
+    "chooseSize": "选择规格"
+  },
   "order": {
     "title":"结算",
     "steps":["信息","商品","确认","支付","收据"],
@@ -40,9 +33,50 @@
     "address":"地址","province":"省/直辖市","district":"区/县","commune":"乡/街道","village":"村/社区",
     "deliveryFee":"运费","subtotal":"小计","total":"合计"
   },
-
   "about": {
     "title": "关于我们",
     "story": "我们以平静、清晰和用心烘焙咖啡。从农场到杯中，为您带来温暖而极简的体验 —— 设计简约，但味道深邃。"
+  },
+  "common": {
+    "back": "返回"
+  },
+  "payment": {
+    "cod": "货到付款",
+    "aba": "ABA 支付",
+    "subtotal": "小计",
+    "delivery": "运费",
+    "total": "合计",
+    "generating_qr": "正在生成二维码...",
+    "qr_hint": "点击生成二维码。",
+    "payment_id": "支付编号",
+    "scan_wait": "扫码支付，等待确认...",
+    "processing": "处理中...",
+    "confirm_cod": "确认货到付款",
+    "generating": "正在生成...",
+    "generate_qr": "生成二维码"
+  },
+  "review": {
+    "customer": "客户",
+    "address": "地址",
+    "no_address": "暂无地址",
+    "order_items": "订单商品",
+    "no_items": "暂无商品。",
+    "subtotal": "小计",
+    "delivery": "运费",
+    "total": "合计",
+    "proceed_payment": "去支付",
+    "qty": "数量",
+    "each": "每件",
+    "item": "商品"
+  },
+  "address": {
+    "search_placeholder": "搜索…",
+    "no_results": "无结果",
+    "select_province": "选择省/直辖市",
+    "select_district": "选择区/县",
+    "select_commune": "选择乡/街道",
+    "select_village": "选择村/社区",
+    "street": "详细地址",
+    "street_placeholder": "如：XX路 XX号 / 楼层/门牌号"
   }
 }
