--- a/src/i18n/locales/kh.json
+++ b/src/i18n/locales/kh.json
@@ -13,6 +13,9 @@
     "title": "ផលិតផលទាំងអស់",
     "filter": "ត្រង",
     "sort": "តម្រៀប",
+    "base": "មូលដ្ឋាន",
+    "soldOut": "អស់ពីស្តុក",
+    "price": "តម្លៃ",
     "all": "ទាំងអស់",
     "sortPopular": "ពេញនិយម",
     "sortPriceAsc": "តម្លៃ ↑",
@@ -27,6 +30,8 @@
   },
   "order": {
     "title":"ការទូទាត់",
+    "info_hint": "យើងនឹងប្រើព័ត៌មានទាំងនេះ ដើម្បីដំណើរការការបញ្ជាទិញ និងការដឹកជញ្ជូនរបស់អ្នក។",
+    "privacy_hint": "យើងនឹងមិនចែករំលែកព័ត៌មានរបស់អ្នកទេ។ មានតែអាសយដ្ឋានអ៊ីមែលប៉ុណ្ណោះដែលស្រេចចិត្ត។",
     "steps":["ព័ត៌មាន","ឥវ៉ាន់","ពិនិត្យឡើងវិញ","ការទូទាត់","បង្កាន់ដៃ"],
     "info":"ព័ត៌មានអតិថិជន",
     "name":"ឈ្មោះពេញ","email":"អ៊ីមែល","phone":"ទូរស័ព្ទ",
@@ -38,7 +43,9 @@
     "story": "យើង​ឆុងកាហ្វេ​ដោយ​ភាពស្ងប់ស្ងាត់ ភាពច្បាស់លាស់ និង​ការ​ថែរក្សា។ ពី​កសិដ្ឋាន​ដល់​កែវ យើង​នាំមក​នូវបទពិសោធន៍កក់ក្តៅ និង​សាមញ្ញ — ការរចនាសាមញ្ញ ប៉ុន្តែរសជាតិជ្រៅជ្រះ។"
   },
   "common": {
-    "back": "ថយក្រោយ"
+    "back": "ថយក្រោយ",
+    "next": "បន្ទាប់",
+    "addToCart": "បន្ថែមទៅកន្ត្រក"
   },
   "payment": {
     "cod": "បង់លុយពេលដឹកដល់ (COD)",
@@ -77,6 +84,32 @@
     "select_commune": "ជ្រើសឃុំ/សង្កាត់",
     "select_village": "ជ្រើសភូមិ",
     "street": "ផ្លូវ/អាសយដ្ឋានលម្អិត",
-    "street_placeholder": "ឧ. ផ្លូវ/ផ្ទះ/អាគារ/ជាន់"
+    "street_placeholder": "ឧ. ផ្លូវ/ផ្ទះ/អាគារ/ជាន់",
+    "selected": "បានជ្រើសរើស",
+    "required": "សូមបំពេញអាសយដ្ឋានរបស់អ្នកឲ្យបានពេញលេញ។"
+  },
+  "errors": {
+    "name_required": "សូមបំពេញឈ្មោះរបស់អ្នក។",
+    "name_short": "ឈ្មោះខ្លីពេក។",
+    "email_invalid": "សូមបញ្ចូលអ៊ីមែលត្រឹមត្រូវ។",
+    "phone_required": "សូមបំពេញលេខទូរស័ព្ទរបស់អ្នក។",
+    "phone_invalid": "ប្រើលេខ 6–20 ខ្ទង់ (អនុញ្ញាតលេខ ដកឃ្លា + ឬ -)។"
+  },
+  "footer": {
+    "facebook": "ហ្វេសប៊ុក",
+    "instagram": "អ៊ីនស្តាក្រាម",
+    "wechat": "វីឆាត",
+    "telegram": "តេលេក្រាម"
+  },
+  "items": {
+    "title": "កន្ត្រកទំនិញរបស់អ្នក",
+    "addMore": "បន្ថែមផលិតផលទៀត",
+    "clear": "សម្អាតកន្ត្រក",
+    "empty": "មិនមានទំនិញនៅក្នុងកន្ត្រកទេ។"
+  },
+  "qty": {
+    "decrease": "បន្ថយ",
+    "increase": "បន្ថែម",
+    "quantity": "បរិមាណ"
   }
 }
