--- a/src/i18n/locales/kh.json
+++ b/src/i18n/locales/kh.json
@@ -2,6 +2,7 @@
   "nav": { "home":"ទំព័រដើម","products":"ផលិតផល","order":"ការបញ្ជាទិញ","about":"អំពីពួកយើង","cart":"កន្ត្រក" },
   "home": {
     "heroTitle":"កាហ្វេ ស្ងប់ស្ងាត់ និងច្បាស់លាស់",
+    "heroSubtitle": "ពីកសិដ្ឋានមួយទៅពែងមួយ ស្វែងរកសណ្តែកដែលមានប្រភពដើមតែមួយ និងការបញ្ចូលគ្នាដែលអ្នកនឹងចូលចិត្ត។",
     "cta":"ទិញកាហ្វេ",
     "sections": {
       "farm": { "title": "មកពីកសិដ្ឋានកាហ្វេ", "subtitle": "ជ្រើសរើសកាហ្វេគុណភាពល្អបំផុត ដល់តែពែងរបស់អ្នក" },
