--- a/src/i18n/locales/kh.json
+++ b/src/i18n/locales/kh.json
@@ -13,6 +13,7 @@
   "products": {
     "title": "ផលិតផលទាំងអស់",
     "filter": "ត្រង",
+    "variant": "ជម្រើស",
     "sort": "តម្រៀប",
     "base": "មូលដ្ឋាន",
     "soldOut": "អស់ពីស្តុក",
@@ -46,7 +47,8 @@
   "common": {
     "back": "ថយក្រោយ",
     "next": "បន្ទាប់",
-    "addToCart": "បន្ថែមទៅកន្ត្រក"
+    "addToCart": "បន្ថែមទៅកន្ត្រក",
+    "remove": "ដកចេញ"
   },
   "payment": {
     "cod": "បង់លុយពេលដឹកដល់ (COD)",
@@ -106,7 +108,15 @@
     "title": "កន្ត្រកទំនិញរបស់អ្នក",
     "addMore": "បន្ថែមផលិតផលទៀត",
     "clear": "សម្អាតកន្ត្រក",
-    "empty": "មិនមានទំនិញនៅក្នុងកន្ត្រកទេ។"
+    "empty": "មិនមានទំនិញនៅក្នុងកន្ត្រកទេ។",
+    "clearTitle": "សម្អាតរទេះទំនិញរបស់អ្នក?",
+    "clearHint": "វានឹងលុបទំនិញទាំងអស់ចេញពីរទេះទំនិញរបស់អ្នក។ សកម្មភាពនេះមិនអាចត្រឡប់វិញបានទេ។"
+  },
+  "cart": {
+    "confirmRemoveTitle": "លុបទំនិញនេះ?",
+    "confirmRemoveHint": "“{{title}}” នឹងត្រូវបានលុបចេញពីរទេះទំនិញរបស់អ្នក។",
+    "unit": "ឯកតា",
+    "total": "សរុប"
   },
   "qty": {
     "decrease": "បន្ថយ",
