--- a/src/i18n/locales/kh.json
+++ b/src/i18n/locales/kh.json
@@ -1,13 +1,45 @@
 {
   "nav": { "home":"ទំព័រដើម","products":"ផលិតផល","order":"ការបញ្ជាទិញ","about":"អំពីពួកយើង","cart":"កន្ត្រក" },
   "home": {
-    "heroTitle":"កាហ្វេ ស្ងប់ស្ងាត់ និងច្បាស់លាស់",
+    "heroTitle": "កាហ្វេ ស្ងប់ស្ងាត់ និងច្បាស់លាស់",
     "heroSubtitle": "ពីកសិដ្ឋានមួយទៅពែងមួយ ស្វែងរកសណ្តែកដែលមានប្រភពដើមតែមួយ និងការបញ្ចូលគ្នាដែលអ្នកនឹងចូលចិត្ត។",
-    "cta":"ទិញកាហ្វេ",
+    "cta": "ទិញកាហ្វេ",
+    "cards": {
+      "fresh": {
+        "title": "ការអុជថ្មី",
+        "text": "យើងអុជក្នុងបរិមាណតូចៗ ហើយផ្ញើរដោយល្បឿនលឿនសម្រាប់រសជាតិល្អបំផុត។"
+      },
+      "origin": {
+        "title": "ប្រភពតែមួយ",
+        "text": "សណ្តែកមានប្រភពច្បាស់លាស់ ពីកសិដ្ឋានដែលអាចទុកចិត្តបាន។"
+      },
+      "delivery": {
+        "title": "ដឹកជញ្ជូនលឿន",
+        "text": "ជម្រើសដឹកជញ្ជូនក្នុងថ្ងៃនៅក្នុងទីក្រុង និងសេវាដឹកជញ្ជូនជាតិស្របពេល។"
+      }
+    },
+    "stats": {
+      "farmers": "កសិករ ដៃគូ",
+      "profiles": "ប្រវត្តិការអុជ",
+      "rating": "ពិន្ទុមធ្យម"
+    },
     "sections": {
-      "farm": { "title": "មកពីកសិដ្ឋានកាហ្វេ", "subtitle": "ជ្រើសរើសកាហ្វេគុណភាពល្អបំផុត ដល់តែពែងរបស់អ្នក" },
-      "brew": { "title": "ការចម្អិនដោយកិត្តិយស", "subtitle": "គ្រប់ពែងត្រូវបានចម្រាញ់ដោយការយកចិត្តទុកដាក់ ពោរពេញដោយក្លិនក្រអូប" },
-      "featured": { "title": "ការជ្រើសរើសពិសេស", "subtitle": "ស្វែងយល់អំពីកាហ្វេពេញនិយមរបស់យើង" }
+      "farm": {
+        "title": "មកពីកសិដ្ឋានកាហ្វេ",
+        "subtitle": "យើងសហការដោយផ្ទាល់ជាមួយកសិករ ដើម្បីធានាថាមានតម្លៃយុត្តិធម៌ និងគុណភាពស្ថិតស្ថេរ។"
+      },
+      "brew": {
+        "title": "ការចម្អិនដោយកិត្តិយស",
+        "subtitle": "រៀនវិធីធ្វើកាហ្វេទាំង Pour-over, Espresso និង Cold Brew។"
+      },
+      "featured": {
+        "title": "ការជ្រើសរើសពិសេស",
+        "subtitle": "សណ្តែកតាមរដូវ និងការជ្រើសរើសដែលសហគមន៍ចូលចិត្ត។"
+      }
+    },
+    "banner": {
+      "title": "ត្រៀមខ្លួនសម្រាប់ព្រឹកល្អជាងនេះ?",
+      "subtitle": "កាហ្វេអុជថ្មី ផ្ញើរដោយល្បឿន។ ពេលនេះកាហ្វេថ្មីដែលអ្នកចូលចិត្តកំពុងរង់ចាំ។"
     }
   },
   "products": {
