--- a/src/i18n/locales/kh.json
+++ b/src/i18n/locales/kh.json
@@ -80,7 +80,8 @@
     "back": "ថយក្រោយ",
     "next": "បន្ទាប់",
     "addToCart": "បន្ថែមទៅកន្ត្រក",
-    "remove": "ដកចេញ"
+    "remove": "ដកចេញ",
+    "optional": "(ជម្រើស)"
   },
   "payment": {
     "cod": "បង់លុយពេលដឹកដល់ (COD)",
