--- a/src/i18n/locales/cn.json
+++ b/src/i18n/locales/cn.json
@@ -82,7 +82,8 @@
     "addToCart": "加入购物车",
     "unit": "单位",
     "total": "合计",
-    "remove": "移除"
+    "remove": "移除",
+    "optional": "（可选）"
   },
   "payment": {
     "cod": "货到付款",
