--- a/src/i18n/locales/kh.json
+++ b/src/i18n/locales/kh.json
@@ -81,7 +81,8 @@
     "next": "បន្ទាប់",
     "addToCart": "បន្ថែមទៅកន្ត្រក",
     "remove": "ដកចេញ",
-    "optional": "(ជម្រើស)"
+    "optional": "(ជម្រើស)",
+    "added": "បានបន្ថែមទៅក្នុងរទេះទំនិញ!"
   },
   "payment": {
     "cod": "បង់លុយពេលដឹកដល់ (COD)",
