--- a/src/i18n/locales/cn.json
+++ b/src/i18n/locales/cn.json
@@ -83,7 +83,8 @@
     "unit": "单位",
     "total": "合计",
     "remove": "移除",
-    "optional": "（可选）"
+    "optional": "（可选）",
+    "added": "已加入购物车！"
   },
   "payment": {
     "cod": "货到付款",
