--- a/src/i18n/locales/kh.json
+++ b/src/i18n/locales/kh.json
@@ -70,7 +70,13 @@
     "info":"ព័ត៌មានអតិថិជន",
     "name":"ឈ្មោះពេញ","email":"អ៊ីមែល","phone":"ទូរស័ព្ទ",
     "address":"អាសយដ្ឋាន","province":"ខេត្ត/ក្រុង","district":"ស្រុក/ខណ្ឌ","commune":"ឃុំ/សង្កាត់","village":"ភូមិ",
-    "deliveryFee":"ថ្លៃដឹកជញ្ជូន","subtotal":"សរុបរង","total":"សរុប"
+    "deliveryFee":"ថ្លៃដឹកជញ្ជូន","subtotal":"សរុបរង","total":"សរុប",
+    "reset": {
+      "title": "ចាប់ផ្តើមការបញ្ជាទិញម្ដងទៀត?",
+      "hint": "វានឹងលុបព័ត៌មានទំនាក់ទាក់ អាសយដ្ឋាន ទំនិញ និងតម្លៃសរុប។",
+      "hintShort": "ចង់ចាប់ផ្តើមសូន្យ?",
+      "done": "បានកំណត់ការបញ្ជាទិញឡើងវិញ។"
+    }
   },
   "about": {
     "title": "អំពី​ពួក​យើង",
@@ -82,7 +88,10 @@
     "addToCart": "បន្ថែមទៅកន្ត្រក",
     "remove": "ដកចេញ",
     "optional": "(ជម្រើស)",
-    "added": "បានបន្ថែមទៅក្នុងរទេះទំនិញ!"
+    "added": "បានបន្ថែមទៅក្នុងរទេះទំនិញ!",
+    "confirm": "បាទ/ចាស",
+    "cancel": "បោះបង់",
+    "reset": "ចាប់ផ្តើមការបញ្ជាទិញម្ដងទៀត?"
   },
   "payment": {
     "cod": "បង់លុយពេលដឹកដល់ (COD)",
